[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/egg/Incubator.gd" type="Script" id=1]
[ext_resource path="res://src/egg/Nest.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/egg/Egg.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/egg/Lamp.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/background/background.png" type="Texture" id=5]
[ext_resource path="res://assets/objects/table-surface.png" type="Texture" id=6]
[ext_resource path="res://src/egg/Moisturizer.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/objects/shelf-left.png" type="Texture" id=8]
[ext_resource path="res://assets/objects/shelf-right.png" type="Texture" id=9]
[ext_resource path="res://src/egg/Radio.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/egg/MoistureMeter.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/egg/NestContainer.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 18 )

[sub_resource type="Animation" id=1]
resource_name = "egg-fall"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("EggContainer/Egg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1, 1.5, 2, 2.3, 2.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -39.6489, -87.6783, -129.624, -217.711, -277.907, -289.888, -277.907, -289.888 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EggContainer/Egg:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, -6 ), Vector2( -9, -4 ), Vector2( -15, -11.5 ), Vector2( -23, -13 ), Vector2( -35, -16 ), Vector2( -48, -16 ), Vector2( -60, -7 ), Vector2( -69, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EggContainer/Egg:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 0 ]
}

[node name="Incubator" type="Node2D"]
script = ExtResource( 1 )

[node name="Bases" type="Node2D" parent="."]

[node name="PillowContainer" parent="Bases" instance=ExtResource( 15 )]
position = Vector2( -107, -2 )
base_type = "PILLOW"

[node name="NestContainer" parent="Bases" instance=ExtResource( 15 )]
position = Vector2( -128, 19 )

[node name="Background" type="Sprite" parent="."]
z_index = -100
texture = ExtResource( 5 )

[node name="LeftShelf" type="Sprite" parent="Background"]
position = Vector2( -110, 0 )
texture = ExtResource( 8 )

[node name="RightShelf" type="Sprite" parent="Background"]
position = Vector2( 110, 0 )
texture = ExtResource( 9 )

[node name="Nest" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 24 )

[node name="EggContainer" type="Node2D" parent="."]
position = Vector2( 0, 22 )

[node name="EggDropoff" type="Area2D" parent="EggContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EggContainer/EggDropoff"]
position = Vector2( 1, -8 )
shape = SubResource( 2 )

[node name="EggPlaceholder" parent="EggContainer" instance=ExtResource( 3 )]
visible = false
modulate = Color( 1, 1, 1, 0.203922 )
position = Vector2( 0, 1 )
static_egg = true

[node name="Egg" parent="EggContainer" instance=ExtResource( 3 )]
wiggle_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/egg-fall = SubResource( 1 )

[node name="Lamp" parent="." instance=ExtResource( 4 )]
position = Vector2( -2, 0 )

[node name="Table" type="Sprite" parent="."]
position = Vector2( 0, 49 )
z_index = -6
texture = ExtResource( 6 )

[node name="MoisturizerContainer" type="Node2D" parent="."]
position = Vector2( 133, 10 )

[node name="MoisturizerPlaceholder" parent="MoisturizerContainer" instance=ExtResource( 7 )]
visible = false
modulate = Color( 1, 1, 1, 0.258824 )

[node name="Moisturizer" parent="MoisturizerContainer" instance=ExtResource( 7 )]

[node name="MoisturizerDropoff" type="Area2D" parent="MoisturizerContainer"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MoisturizerContainer/MoisturizerDropoff"]
polygon = PoolVector2Array( -8, 15, -8, -4, -4, -9, -7, -11, -11, -5, -10, -11, -15, -14, -10, -19, 5, -19, 8, -15, 8, 16, 5, 19, -4, 19 )

[node name="BaseDropoff" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BaseDropoff"]
polygon = PoolVector2Array( -18, 36, -29, 25, -21, 14, 16, 14, 26, 22, 21, 35, 0, 40 )

[node name="Radio" parent="." instance=ExtResource( 10 )]
position = Vector2( 124, -69 )

[node name="MoistureMeter" parent="." instance=ExtResource( 11 )]
position = Vector2( 56, -35 )
z_index = -8

[node name="WiggleTimer" type="Timer" parent="."]
